[gd_scene load_steps=100 format=3 uid="uid://bc2uxg0f8xtlv"]

[ext_resource type="Script" path="res://scripts/drag_window.gd" id="1_6xk3g"]
[ext_resource type="Texture2D" uid="uid://co23j6v2y71vg" path="res://art/Screen.png" id="1_plqb4"]
[ext_resource type="Texture2D" uid="uid://cei0m85yv5wys" path="res://art/Body.png" id="2_lv3vw"]
[ext_resource type="Texture2D" uid="uid://d3vwtbyyaq4x7" path="res://art/states/LoudInnerThoughtsIcon.png" id="2_ufgsa"]
[ext_resource type="Texture2D" uid="uid://b23m3shn5wti3" path="res://art/states/OverwhelmedIcon.png" id="3_48uuk"]
[ext_resource type="Script" path="res://scripts/states_menu.gd" id="3_hysu4"]
[ext_resource type="Texture2D" uid="uid://dr70k252vnvgn" path="res://art/ButtonReleased.png" id="3_o1wkp"]
[ext_resource type="Texture2D" uid="uid://bvnljqs50ubku" path="res://art/states/FearOfDeathIcon.png" id="4_8u0cd"]
[ext_resource type="Shader" path="res://shaders/progress_bar.gdshader" id="4_xrqwi"]
[ext_resource type="Texture2D" uid="uid://cvqdgurgg1hkw" path="res://art/ButtonPressed.png" id="4_yorv4"]
[ext_resource type="Texture2D" uid="uid://biov067vi24yo" path="res://art/RightReleased.png" id="6_1xujt"]
[ext_resource type="Script" path="res://scripts/state.gd" id="6_647pm"]
[ext_resource type="Script" path="res://scripts/action_menu.gd" id="6_p1swq"]
[ext_resource type="Texture2D" uid="uid://df7ham40ijue7" path="res://art/Resize.png" id="6_xv50p"]
[ext_resource type="Texture2D" uid="uid://ca0wwwjw1xx48" path="res://art/actions/WaxHeadsIcon.png" id="6_ykrpd"]
[ext_resource type="Script" path="res://Scripts/resize.gd" id="7_ci1wg"]
[ext_resource type="Texture2D" uid="uid://dj0ol724jg74c" path="res://art/actions/WindowIcon.png" id="7_in6r8"]
[ext_resource type="Texture2D" uid="uid://dnorbd6idfxas" path="res://art/RightPressed.png" id="7_q3rti"]
[ext_resource type="Texture2D" uid="uid://cepdrxd6nsqif" path="res://art/LeftReleased.png" id="8_mfe73"]
[ext_resource type="Texture2D" uid="uid://l1tqr7wfjfyg" path="res://art/actions/ListenMusicIcon.png" id="8_vvdv8"]
[ext_resource type="Texture2D" uid="uid://cpsukwc0sdimj" path="res://art/LeftPressed.png" id="9_gf4wo"]
[ext_resource type="Texture2D" uid="uid://daruhju1e8qfs" path="res://art/actions/ComplimentIcon.png" id="12_2joox"]
[ext_resource type="FontFile" uid="uid://b7juqmmms7737" path="res://fonts/BornAddict.ttf" id="14_hvcav"]
[ext_resource type="Texture2D" uid="uid://nta6cuic168r" path="res://art/animations/Idle.png" id="19_dllgi"]
[ext_resource type="Script" path="res://scripts/existentialgotchi.gd" id="20_iy2gj"]
[ext_resource type="Texture2D" uid="uid://dcrn6d378tb8v" path="res://art/animations/ListenMusic.png" id="20_l3r3b"]
[ext_resource type="Texture2D" uid="uid://cyg81h0t2a0c7" path="res://art/animations/PlayWaxHeads.png" id="22_0ntd1"]
[ext_resource type="Texture2D" uid="uid://3w8tkfl6fh7b" path="res://art/animations/ComplimentAnim.png" id="22_pdqil"]
[ext_resource type="Texture2D" uid="uid://wudcloigy274" path="res://art/animations/LookOutWindow.png" id="22_ukfqp"]
[ext_resource type="Texture2D" uid="uid://dsf113247hcgm" path="res://art/animations/FearDeath.png" id="23_r513t"]
[ext_resource type="Texture2D" uid="uid://birv8pakp0pvb" path="res://art/animations/InnerThoughts.png" id="24_7ii7x"]
[ext_resource type="Texture2D" uid="uid://g5lqytghy43h" path="res://art/Reset.png" id="24_kcad4"]
[ext_resource type="Texture2D" uid="uid://dyd7j1vi5bh8t" path="res://art/animations/FearDeath2.png" id="24_t04sq"]
[ext_resource type="Script" path="res://scripts/restart.gd" id="25_8jfu1"]
[ext_resource type="Texture2D" uid="uid://bi5me3slc2sfo" path="res://art/animations/InnerThoughts2.png" id="25_ka4jr"]
[ext_resource type="Texture2D" uid="uid://b7cf6qncnnbcr" path="res://art/animations/Overwhelmed.png" id="28_pkvg3"]
[ext_resource type="Texture2D" uid="uid://dgpuan3l0r6tw" path="res://art/animations/Overwhelmed2.png" id="31_b7kmt"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nqr0b"]
shader = ExtResource("4_xrqwi")
shader_parameter/min_val = null
shader_parameter/current_val = 0.0
shader_parameter/max_val = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nd57g"]
shader = ExtResource("4_xrqwi")
shader_parameter/min_val = null
shader_parameter/current_val = 0.0
shader_parameter/max_val = 10.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_1vt4l"]
shader = ExtResource("4_xrqwi")
shader_parameter/min_val = null
shader_parameter/current_val = 0.0
shader_parameter/max_val = 10.0

[sub_resource type="AtlasTexture" id="AtlasTexture_ejqaw"]
atlas = ExtResource("22_pdqil")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_u04pk"]
atlas = ExtResource("22_pdqil")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_givid"]
atlas = ExtResource("22_pdqil")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_q5q1e"]
atlas = ExtResource("22_pdqil")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_itu50"]
atlas = ExtResource("22_pdqil")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw5gr"]
atlas = ExtResource("23_r513t")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_speby"]
atlas = ExtResource("23_r513t")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eu12n"]
atlas = ExtResource("23_r513t")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_agxmm"]
atlas = ExtResource("23_r513t")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_161hn"]
atlas = ExtResource("23_r513t")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_p1tjn"]
atlas = ExtResource("24_t04sq")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6plog"]
atlas = ExtResource("24_t04sq")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_l02e3"]
atlas = ExtResource("24_t04sq")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfvik"]
atlas = ExtResource("24_t04sq")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuuve"]
atlas = ExtResource("24_t04sq")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhgg6"]
atlas = ExtResource("19_dllgi")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2jb5"]
atlas = ExtResource("19_dllgi")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_5rkow"]
atlas = ExtResource("19_dllgi")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m2gv5"]
atlas = ExtResource("19_dllgi")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ayfqn"]
atlas = ExtResource("19_dllgi")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8rxes"]
atlas = ExtResource("24_7ii7x")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qpa3r"]
atlas = ExtResource("24_7ii7x")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkpkh"]
atlas = ExtResource("24_7ii7x")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_onuge"]
atlas = ExtResource("24_7ii7x")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vumrc"]
atlas = ExtResource("24_7ii7x")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tr8oj"]
atlas = ExtResource("25_ka4jr")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrm5a"]
atlas = ExtResource("25_ka4jr")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ndfi"]
atlas = ExtResource("25_ka4jr")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymsv4"]
atlas = ExtResource("25_ka4jr")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_os48o"]
atlas = ExtResource("25_ka4jr")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qfus"]
atlas = ExtResource("20_l3r3b")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2xhs"]
atlas = ExtResource("20_l3r3b")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_omapd"]
atlas = ExtResource("20_l3r3b")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_m3xx2"]
atlas = ExtResource("20_l3r3b")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_brolb"]
atlas = ExtResource("20_l3r3b")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6beth"]
atlas = ExtResource("22_ukfqp")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xj34x"]
atlas = ExtResource("22_ukfqp")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2sbp"]
atlas = ExtResource("22_ukfqp")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wl4c3"]
atlas = ExtResource("22_ukfqp")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8iai8"]
atlas = ExtResource("22_ukfqp")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_sp63j"]
atlas = ExtResource("28_pkvg3")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_evfet"]
atlas = ExtResource("28_pkvg3")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdbwh"]
atlas = ExtResource("28_pkvg3")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovj56"]
atlas = ExtResource("28_pkvg3")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bdx0r"]
atlas = ExtResource("28_pkvg3")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7anej"]
atlas = ExtResource("31_b7kmt")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4xasa"]
atlas = ExtResource("31_b7kmt")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_linqt"]
atlas = ExtResource("31_b7kmt")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxkbp"]
atlas = ExtResource("31_b7kmt")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_x53h0"]
atlas = ExtResource("31_b7kmt")
region = Rect2(544, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_01b7o"]
atlas = ExtResource("22_0ntd1")
region = Rect2(0, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkwa7"]
atlas = ExtResource("22_0ntd1")
region = Rect2(136, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_eytk7"]
atlas = ExtResource("22_0ntd1")
region = Rect2(272, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4pya"]
atlas = ExtResource("22_0ntd1")
region = Rect2(408, 0, 136, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ufds"]
atlas = ExtResource("22_0ntd1")
region = Rect2(544, 0, 136, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_4u277"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ejqaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u04pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_givid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q5q1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_itu50")
}],
"loop": true,
"name": &"Compliment",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw5gr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_speby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eu12n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agxmm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_161hn")
}],
"loop": true,
"name": &"FearDeath",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p1tjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6plog")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l02e3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lfvik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuuve")
}],
"loop": true,
"name": &"FearDeath2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhgg6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2jb5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5rkow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m2gv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ayfqn")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8rxes")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qpa3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkpkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_onuge")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vumrc")
}],
"loop": true,
"name": &"InnerThoughts",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tr8oj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrm5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ndfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymsv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_os48o")
}],
"loop": true,
"name": &"InnerThoughts2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qfus")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2xhs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_omapd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m3xx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_brolb")
}],
"loop": true,
"name": &"ListenMusic",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6beth")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xj34x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2sbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wl4c3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8iai8")
}],
"loop": true,
"name": &"LookOutWindow",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sp63j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_evfet")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdbwh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovj56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bdx0r")
}],
"loop": true,
"name": &"Overwhelmed",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7anej")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4xasa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_linqt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oxkbp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x53h0")
}],
"loop": true,
"name": &"Overwhelmed2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_01b7o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkwa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eytk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4pya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ufds")
}],
"loop": true,
"name": &"PlayWaxHeads",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_02q2w"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Existentialgotchi:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(243, 276)]
}

[sub_resource type="Animation" id="Animation_1gbse"]
resource_name = "text_appear"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Existentialgotchi:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(243, 276), Vector2(160, 276)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6cl3a"]
_data = {
"RESET": SubResource("Animation_02q2w"),
"text_appear": SubResource("Animation_1gbse")
}

[node name="world" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_6xk3g")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -225.5
offset_top = -23.0
offset_right = 225.5
grow_horizontal = 2
grow_vertical = 0
text = "A game by Rothio Tome and Murray Somerwolff for MJW17"

[node name="Screen" type="Sprite2D" parent="."]
position = Vector2(247, 281)
texture = ExtResource("1_plqb4")

[node name="Panel" type="Panel" parent="."]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.158
anchor_top = 0.227
anchor_right = 0.852
anchor_bottom = 0.698
offset_top = 0.259995
offset_bottom = -16.76
grow_horizontal = 2
grow_vertical = 2

[node name="StateMenu" type="HBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_right = 100.0
offset_bottom = 64.0
grow_horizontal = 2
theme_override_constants/separation = 20
script = ExtResource("3_hysu4")

[node name="InnerThoughts" type="TextureRect" parent="Panel/StateMenu"]
material = SubResource("ShaderMaterial_nqr0b")
layout_mode = 2
texture = ExtResource("2_ufgsa")
script = ExtResource("6_647pm")

[node name="Overwhelmed" type="TextureRect" parent="Panel/StateMenu"]
material = SubResource("ShaderMaterial_nd57g")
layout_mode = 2
texture = ExtResource("3_48uuk")
script = ExtResource("6_647pm")

[node name="FearDeath" type="TextureRect" parent="Panel/StateMenu"]
material = SubResource("ShaderMaterial_1vt4l")
layout_mode = 2
texture = ExtResource("4_8u0cd")
script = ExtResource("6_647pm")

[node name="ActionMenu" type="HBoxContainer" parent="Panel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -116.0
offset_top = -64.0
offset_right = 116.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 20
script = ExtResource("6_p1swq")

[node name="PlayWaxHeads" type="TextureRect" parent="Panel/ActionMenu"]
self_modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
texture = ExtResource("6_ykrpd")

[node name="LookOutWindow" type="TextureRect" parent="Panel/ActionMenu"]
self_modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
texture = ExtResource("7_in6r8")

[node name="ListenMusic" type="TextureRect" parent="Panel/ActionMenu"]
self_modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
texture = ExtResource("8_vvdv8")

[node name="Compliment" type="TextureRect" parent="Panel/ActionMenu"]
self_modulate = Color(1, 1, 1, 0.498039)
layout_mode = 2
texture = ExtResource("12_2joox")

[node name="Label" type="Label" parent="Panel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 155.0
offset_top = 75.0
offset_right = 338.0
offset_bottom = 208.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("14_hvcav")
theme_override_font_sizes/font_size = 25
autowrap_mode = 2

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(250, 302)
texture = ExtResource("2_lv3vw")

[node name="Select" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 218.0
offset_top = 471.0
offset_right = 293.0
offset_bottom = 558.0
texture_normal = ExtResource("3_o1wkp")
texture_pressed = ExtResource("4_yorv4")

[node name="Right" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 347.0
offset_top = 455.0
offset_right = 422.0
offset_bottom = 542.0
texture_normal = ExtResource("6_1xujt")
texture_pressed = ExtResource("7_q3rti")

[node name="Left" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 91.0
offset_top = 453.0
offset_right = 166.0
offset_bottom = 540.0
texture_normal = ExtResource("8_mfe73")
texture_pressed = ExtResource("9_gf4wo")

[node name="Resize" type="TextureButton" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -55.0
offset_bottom = 55.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("6_xv50p")
script = ExtResource("7_ci1wg")

[node name="Resize2" type="TextureButton" parent="."]
layout_mode = 1
offset_right = 55.0
offset_bottom = 55.0
size_flags_horizontal = 8
size_flags_vertical = 0
texture_normal = ExtResource("24_kcad4")
script = ExtResource("25_8jfu1")

[node name="Existentialgotchi" type="AnimatedSprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(243, 276)
sprite_frames = SubResource("SpriteFrames_4u277")
animation = &"PlayWaxHeads"
autoplay = "Idle"
frame_progress = 0.512325
script = ExtResource("20_iy2gj")

[node name="GlobalAnimPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_6cl3a")
}

[connection signal="states_updated" from="Panel/StateMenu" to="." method="_on_states_updated"]
[connection signal="do_action" from="Panel/ActionMenu" to="." method="_on_action_menu_do_action"]
[connection signal="pressed" from="Select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
